[package]
name = "github-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = "1.1.5"
clap = { version = "3.2.16", features = ["derive", "env"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = {version = "1.20.4", features = ["full"] }
